# noyau_devII_2TM2

./: .gitignore  LICENSE  README.md  UML_PyP.drawio  main.py  pyproject.toml  requirements.txt  schéma_architecture.drawio  setup.cfg  test.py
.github/workflows/: build.yml  main.yml  test_module_bot.yml
Module/: app.py  kivy.txt  main.py
Module/Message/: message.py
Module/bot/: bot.py  test_bot.py
Module/cine/: cine.py  test_cine.py
Module/data/: 2TM2-G2.pem  codesTemps.py  config.py  help.txt  itinerary_json.py  test.py
Module/itinerary/: itinerary.py  main.py  test_itinerary.py
Module/message/: message.py
Module/news/: news.py  test_news.py
Module/opinion/: opinion.py  test_opinion.py
Module/request/: request.py  test_request.py
Module/resto/: resto.py  test_resto.py
Module/view/: interface.kv
Module/weather/: test_weather.py  weather.py
UML/: UML_PyP.drawio  schéma_architecture.drawio
mvp/: main.py
mvp/commande/: commande.py
mvp/module/: commande.py
public/tmp_conversations/: basic.json
src/Bot/: bot.py  cine.py  config.py  db_key.pem  itinerary.py  news.py  opinion.py  request.py  resto.py  weather.py
src/bot/: bot.py
src/cine/: cine.py
src/config/: config.py
src/data/: config.py  help.txt  test.py
src/itinerary/: itinerary.py
src/models/: message.py  mongo_connector.py
src/news/: news.py
src/opinion/: opinion.py
src/request/: request.py
test/: __init__.py  context.py  test.py  test_bot.py  test_cine.py  test_itinerary.py  test_news.py  test_opinion.py  test_request.py  test_resto.py  test_weather.py
(+19 files in other folders)
