[metadata]
name = Bot Externe
version = 0.0.1
author = Groupe-2TM2-2
author_email = cardin.tiako@gmail.com
description = ChatBot effectuant des appels sur des API pour obtenir des infos tels que la meteo, des nouvelles, des itinéraires etc..
long_description = file : README.md
url = https://github.com/CardinPatson/noyau_devII_2TM2
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT License
    Operating System :: OS Independant

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src